switched to record camera as default, checking file type in db

--- a/app/views/challengr/index.html.erb
+++ b/app/views/challengr/index.html.erb
@@ -3,9 +3,7 @@
 		<input name="utf8" type="hidden" value="✓">
 	</div>
 	Capture Video:
-	<input type="file" accept="video/*;capture=camcorder">
-	Upload Video:
-  <input id="video_file" name="video[file]" type="file">
+  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder">
   <input name="commit" type="submit" value="Save Video">
 </form>
 
