add (unlimited) upvote button

--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -9,6 +9,7 @@
             <li>{{challenge.startDate}}</li>
             <li>Upvotes: {{challenge.upvotes}}</li>
         </ul>
+        <button ng-click="upvote(challenge.$id)">Upvote</button>
     </li>
 </ul>
 
