fix response submission

--- a/public/angular/app/partials/create-response.html
+++ b/public/angular/app/partials/create-response.html
@@ -11,6 +11,7 @@
   <input type="submit" ng-click="createResponse(newresponse)" value="Create" />
 </form>
 
+<iframe name="myiframe" id="video_frame" style="display:none;"></iframe>
 
 <script>
     
