hackily fix challenge pages (e.g. response upvotes)

--- a/public/angular/app/partials/view-challenge.html
+++ b/public/angular/app/partials/view-challenge.html
@@ -11,7 +11,7 @@
 
 <!-- hide if no responses - TODO: have placeholder otherwise -->
 <ul id="challenge-reponses">
-    <li ng-repeat="response in challenge.responses">
+    <li ng-repeat="response in responses">
         <img src="{{response.thumbUrl}}" alt="">
         <ul>
             <li>{{response.startDate}}</li>
