--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -1,25 +1,78 @@
-<h2>Create Challenge</h2>
+<div style="padding : 0px 31px;">
+	<form accept-charset="UTF-8" action="/challengr/post_video" data-remote="true" enctype="multipart/form-data" id="video_form" method="post" target="myiframe">
 
-<form accept-charset="UTF-8" action="/challengr/post_video" data-remote="true" enctype="multipart/form-data" id="video_form" method="post" target="myiframe">
-	<div style="display:none">
-		<input name="utf8" type="hidden" value="✓">
-	</div>
-	Capture Video:
-  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder">
-  <input name="commit" type="submit" value="Save Video">
-</form>
+		<div style="display:none">
+			<input name="utf8" type="hidden" value="✓">
+		</div>
 
+		<div class="panel panel-default" style="text-align:center;">
+		  
+
+		  <div class="panel-heading" style="border-bottom:0px;">
+		    <h3 style="text-align:center;">Create Challenge</h3>
+		  </div>
+
+
+			<div class="panel-body">
+
+				<div class="fileUpload btn btn-default">
+				  <span>Record Video</span>
+				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder">
+				</div>
+
+				<br />
+			  
+			  <input name="commit" type="submit" value="Save Video" id="attatchVidButton" style="display:none;">
+		  
+		  
+				<form novalidate>
+				  <div class = "row">
+				  	<div class = "col-sm-3">
+				  	  <b>Name:</b>
+				  	</div>
+				  	<div class = "col-sm-9">
+				  		<input type="text" class="form-control" ng-model="newchallenge.name" />
+				  	</div>
+				  </div>
+				  <br />
+				    <input type="submit" class = "btn btn-primary" ng-click="createChallenge(newchallenge)" value="Create" />
+				</form>
+		  </div>
+
+		</div>
+
+	</form>
+</div>
+
+<style>
+	.fileUpload {
+		position: relative;
+		overflow: hidden;
+		margin: 10px;
+	}
+	.fileUpload input.upload {
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0;
+		font-size: 20px;
+		cursor: pointer;
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
+</style>
 <iframe name="myiframe" id="video_frame" style="display:none;"></iframe>
 
-
-<form novalidate>
-    Name: <input type="text" ng-model="newchallenge.name" /><br />
-    <input type="submit" ng-click="createChallenge(newchallenge)" value="Create" />
-</form>
 
 <script>
 	
 	$(function(){
+		
+		$('#video_file').change(function() {
+		  return $("#attatchVidButton").submit();
+		});
+
     $('#video_frame').load(function(){
 			window.video_url = $('#video_frame').contents().find("body").html();
     });
