basic share button

--- a/public/angular/app/partials/view-challenge.html
+++ b/public/angular/app/partials/view-challenge.html
@@ -5,7 +5,7 @@
 
 <!-- surely there's a way to do relative urls, but whatever -->
 <a ng-href="#/challenge/{{challenge.$id}}/respond">Respond to this challenge!</a>
-
+<button ng-click="share()">Share</button>
 
 <h3>Responses</h3>
 
