more styling for Public, and Create Challenge, added background image

--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -1,6 +1,6 @@
 <div style="padding : 0px 31px;">
 	
-	<div class="panel panel-default" style="text-align:center;">
+	<div class="panel panel-default" style="text-align:center;margin-top:-130px;">
 		  
 	  <div class="panel-heading" style="border-bottom:0px;">
 	    <h3 style="text-align:center;">Create Challenge</h3>
@@ -15,7 +15,7 @@
 
 				<div class="fileUpload btn btn-default">
 				  <span>Record Video</span>
-				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder">
+				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:250px;">
 				</div>
 				<br />
 				<video style="display:none;margin: 0 auto;" id = "video_view" width="320" height="240" controls>
