--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -1,4 +1,4 @@
-<h2 style="margin: 0 auto;text-align:center;padding:20px 0px;">Public Challenges</h2>
+<h2 style="margin: -180px auto 0px auto;text-align:center;padding:20px 0px;color:#ffffff;text-shadow: 0px -1px 1px #666;">Public Challenges</h2>
 
 <!-- hide if no challenges - TODO: have placeholder otherwise -->
 
