--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -83,10 +83,12 @@
 			video.appendChild(source);
 			
 			video.addEventListener('canplay', function() {
+					alert("playing");
 			    this.currentTime = this.duration / 2;
 			}, false);
 
 			video.addEventListener('seeked', function() {
+				alert("seeking and drawing");
 				var ctx = canvas.getContext('2d');
 				ctx.drawImage(video,0,0,320,240);
 				window.thumbnail = canvas.toDataURL("image/jpg");
