Commented out file validations

--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -19,7 +19,7 @@
 				</div>
 				<br />
 				<canvas id="mycanvas" width="320" height="240"></canvas>
-				<video style="display:none;margin: 0 auto;" id = "video_view" width="320" height="240" controls>
+				<video style="display:block;margin: 0 auto;" id = "video_view" width="320" height="240" controls>
 				</video>
 
 				<br />
