--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -83,14 +83,11 @@
 			video.appendChild(source);
 			
 			video.addEventListener("playing", function(){
-				 video.addEventListener("canplaythrough",function() { 
-				 	video.addEventListener("progress",function() { 
-				 			video.currentTime = video.duration / 2;
-				 			var ctx = canvas.getContext('2d');
-				 			ctx.drawImage(video,0,0,320,240);
-				 			window.thumbnail = canvas.toDataURL("image/jpg");
-				 		});
-				 });
+				video.currentTime = video.duration / 2;
+				video.pause();
+				var ctx = canvas.getContext('2d');
+				ctx.drawImage(video,0,0,320,240);
+				window.thumbnail = canvas.toDataURL("image/jpg");
 			});
 
 			setTimeout(function() {
