--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -82,36 +82,43 @@
 			source.setAttribute('src', window.video_url);
 			video.appendChild(source);
 			
-			video.addEventListener("playing", function(){
+			// video.addEventListener("playing", function(){
+			// 	video.currentTime = video.duration / 2;
+			// 	video.pause();
+			// 	var ctx = mycanvas.getContext('2d');
+			// 	alert (ctx);
+			// 	ctx.drawImage(video,0,0,320,240);
+			// 	// http://www.w3.org/html/logo/img/mark-word-icon.png
+			// 	window.thumbnail = mycanvas.toDataURL("image/jpg");
+			// });
+
+			video.addEventListener('loadeddata',function() {
 				video.currentTime = video.duration / 2;
-				video.pause();
-				var ctx = mycanvas.getContext('2d');
-				alert (ctx);
-				ctx.drawImage(video,0,0,320,240);
-				window.thumbnail = mycanvas.toDataURL("image/jpg");
-				alert (window.thumbnail);
-			});
-			videoDom.addEventListener('loadeddata',function() {
-				alert("loaded data");
-			  var ctx = mycanvas.getContext('2d');
-			  ctx.drawImage(video,0,0,320,240);
-			  window.thumbnail = mycanvas.toDataURL("image/jpg");
-			});
-
-
-			setTimeout(function() {
-				// alert ("Attempting to draw thumbnail");
-				// video.currentTime = video.duration / 2;
-				// var ctx = canvas.getContext('2d');
-				// ctx.drawImage(video,0,0,320,240);
-				// window.thumbnail = canvas.toDataURL("image/jpg");
 				video.play();
-				video.currentTime = video.duration / 2;
 				video.pause();
-				var ctx = canvas.getContext('2d');
-				ctx.drawImage(video,0,0,320,240);
-				window.thumbnail = canvas.toDataURL("image/jpg");
-     }, 3000);
+				alert("loaded data");
+				setTimeout(function() {
+					alert("drawing data");
+				  var ctx = mycanvas.getContext('2d');
+				  ctx.drawImage(video,0,0,320,240);
+				  window.thumbnail = mycanvas.toDataURL("image/jpg");
+				}, 100);
+			});
+
+
+			// setTimeout(function() {
+			// 	// alert ("Attempting to draw thumbnail");
+			// 	// video.currentTime = video.duration / 2;
+			// 	// var ctx = canvas.getContext('2d');
+			// 	// ctx.drawImage(video,0,0,320,240);
+			// 	// window.thumbnail = canvas.toDataURL("image/jpg");
+			// 	video.play();
+			// 	video.currentTime = video.duration / 2;
+			// 	video.pause();
+			// 	var ctx = canvas.getContext('2d');
+			// 	ctx.drawImage(video,0,0,320,240);
+			// 	window.thumbnail = canvas.toDataURL("image/jpg");
+   //   }, 3000);
 
 
 
