--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -47,6 +47,7 @@
 		position: relative;
 		overflow: hidden;
 		margin: 10px;
+		width: 200px;
 	}
 	.fileUpload input.upload {
 		position: absolute;
