--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -9,18 +9,18 @@
         <h2 class="panel-title"><a ng-href="#/challenge/{{challenge.$id}}">{{challenge.name}}</a></h2>
 		  </div>
 		  <div class="panel-body">
-		  	<div style="margin-top: -100px;">
 	        <!-- <img src="{{challenge.thumbUrl}}" alt=""> -->
-	        <div class="video_cover" id="video_{{challenge.name}}">
-	        </div>
-	        <video class = "card_video" name="video_{{challenge.name}}" style="margin: 0 auto;" width="220" onclick="$('#'+$(this).attr('name')).css('background', 'none');this.play();" height="120">
-	        	 <source src="{{challenge.videoUrl}}" />
-					</video>
+	        <!-- <div class="video_cover" id="video_{{challenge.name}}">
+	        </div> -->
+	        <div style="margin-left:-30px;">
+		        <video class = "card_video" name="video_{{challenge.name}}" style="margin: 0 auto;" width="220" onclick="$('#'+$(this).attr('name')).css('background', 'none');this.play();" height="120">
+		        	 <source src="{{challenge.videoUrl}}" />
+						</video>
+					</div>
 	          <p>{{challenge.startDate}}</p>
 	          <p>Upvotes: {{challenge.upvotes}}</p>
 	        <button ng-click="upvote(challenge.$id)" class = "btn btn-success">Upvote</button>
 			  </div>
-			</div>
 		</div>
 
 </div>
