More styling, attempting to add drag features

--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -3,7 +3,7 @@
 	<div class="panel panel-default" style="text-align:center;margin-top:-130px;">
 		  
 	  <div class="panel-heading" style="border-bottom:0px;">
-	    <h3 style="text-align:center;">Create Challenge</h3>
+	    <h4 style="text-align:center;">Create Challenge</h4>
 	  </div>
 
 		<div class="panel-body">
@@ -15,12 +15,13 @@
 
 				<div class="fileUpload btn btn-default">
 				  <span>Record Video</span>
-				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:250px;">
+				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:200px;">
 				</div>
 				<br />
-				<video style="display:none;margin: 0 auto;" id = "video_view" width="220" height="120" controls>
-				</video>
-
+				<div style="margin: 0 auto;text-align:center;">
+					<video style="display:none;margin: 0 auto;" id = "video_view" width="200" height="120" controls>
+					</video>
+				</div>
 				<br />
 			  
 			  <input name="commit" type="submit" value="Save Video" id="attatchVidButton" style="display:none;">
