--- a/public/angular/app/partials/view-challenge.html
+++ b/public/angular/app/partials/view-challenge.html
@@ -7,7 +7,7 @@
 	  </div>
 	  <div class="panel-body" style="margin: 0 auto; text-align:center;">
 	  	<div style="margin-left:-30px;">
-	      <video name="video_{{challenge.name}}" style="margin: 0 auto;" width="220" onclick="this.play();" height="120">
+	      <video width="220" onclick="this.play();" height="120" >
 	      	 <source src="{{challenge.videoUrl}}" />
 				</video>
 			</div>
@@ -18,8 +18,6 @@
 	  </div>
 
 	</div>
-
-
 	
 
 	<h3>Responses</h3>
@@ -27,7 +25,6 @@
 	<!-- hide if no responses - TODO: have placeholder otherwise -->
 	<ul id="challenge-reponses">
 	    <li ng-repeat="response in responses">
-	        <img src="{{response.thumbUrl}}" alt="">
 	        <ul>
 	            <li>{{response.startDate}}</li>
 	            <li>Upvotes: {{response.upvotes}}</li>
