More styling, attempting to add drag features

--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -11,7 +11,7 @@
 		  <div class="panel-body">
 	        <!-- <img src="{{challenge.thumbUrl}}" alt=""> -->
 	        <div class = "video_cover">
-		        <video class = "card_video" width="220" style="margin-left:-30px;" onclick="this.play();" height="120">
+		        <video class = "card_video" width="220" onclick="this.play();" height="120">
 		        	 <source src="{{challenge.videoUrl}}" />
 						</video>
 					</div>
