More styling, attempting to add drag features

--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -25,6 +25,7 @@
 
 <style>
 	.video_cover {
+		padding:2px;
 		background-size: contain;
 		background-position: center;
 		border: 1px solid #d1d1d1;
