--- a/public/angular/app/partials/view-challenge.html
+++ b/public/angular/app/partials/view-challenge.html
@@ -8,7 +8,7 @@
 	  <div class="panel-body" style="margin: 0 auto; text-align:center;">
 	  	<div style="margin-left:-30px;">
 	      <video width="220" onclick="this.play();" height="120" >
-	      	 <source src="{{challenge.videoUrl}}" />
+	      	 <source src="{{challenge.videoUrl}}" type="video/quicktime" />
 				</video>
 			</div>
 	    <a ng-href="#/challenge/{{challenge.$id}}/respond">Respond to this challenge!</a>
