--- a/public/angular/app/partials/create-response.html
+++ b/public/angular/app/partials/create-response.html
@@ -24,7 +24,7 @@
       </form>
 
       <form novalidate>
-        <input type="submit" class = "btn btn-primary" ng-click="createResponse(newchallenge)" value="Create" />
+        <input type="submit" class = "btn btn-primary" ng-click="createResponse()" value="Create" />
       </form>
 
     </div>
