--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -6,15 +6,15 @@
 </ul>
 
 <!-- hide if no challenges - TODO: have placeholder otherwise -->
-
+<br />
 <div id="pb-challenges" ng-show="publicc.length" style="text-align:center;padding: 0px 20px;">
 
-		<div ng-repeat="challenge in publicc | orderBy: sort | reverse" class="panel panel-default">
-		  <div class="panel-heading" style="border-bottom:0px;">
+		<div style="margin-bottom:40px;"ng-repeat="challenge in publicc | orderBy: sort | reverse" class="panel panel-default">
+		  <div class="panel-heading" style="border-bottom:0px;padding-top:40px;">
+        <div class = "circle-image" style="background-image:url({{challenge.thumbUrl}});" ></div>
         <h2 class="panel-title"><a ng-href="#/challenge/{{challenge.$id}}">{{challenge.name}}</a></h2>
 		  </div>
 		  <div class="panel-body">
-	        <!-- <img src="{{challenge.thumbUrl}}" alt=""> -->
 	        <div class = "video_cover">
 		        <video class = "card_video" width="220" onclick="this.play();" height="120">
 		        	 <source src="{{challenge.videoUrl}}" />
