--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -7,7 +7,7 @@
 
 <!-- hide if no challenges - TODO: have placeholder otherwise -->
 
-<div id="pb-challenges" ng-show="publicc.length" style="text-align:center;padding: 0px 20px;">
+<div id="pb-challenges" ng-hide="fromShare" style="text-align:center;padding: 0px 20px;">
 
 		<div ng-repeat="challenge in publicc | orderBy: sort | reverse" class="panel panel-default">
 		  <div class="panel-heading" style="border-bottom:0px;">
@@ -26,6 +26,50 @@
 			  </div>
 		</div>
 
+</div>
+
+<!-- UBERHACK: duplicate the view challenge template for shared challenges since redirecting apparently doesn't work -->
+<div ng-show="fromShare">
+<div style="padding: 0px 20px; margin-top:-110px;">
+    <!-- surely there's a way to do relative urls, but whatever -->
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{challenge.name}}</h3>
+      </div>
+      <div class="panel-body" style="margin: 0 auto; text-align:center;">
+        <div class = "video_cover">
+        <video class = "card_video" width="220" onclick="this.play();" height="120">
+             <source src="{{challenge.videoUrl}}" type="video/quicktime" />
+                </video>
+            </div>
+            <br />
+        <a ng-href="#/challenge/{{challenge.$id}}/respond">Respond to this challenge!</a>
+        <p> Start Time : <span>{{challenge.startDate}}</span> </p>
+        <p>Upvotes: <span class="badge">{{challenge.upvotes}}</span></p>
+       <button ng-click="share()" class = "btn btn-success" style="float:right;">Share</button>
+      </div>
+
+    </div>
+    
+
+    <h3>Responses</h3>
+    <div class="panel panel-default" style = "text-align:center;" ng-repeat="response in responses">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{response.submittedBy}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class = "video_cover">
+        <video class = "card_video" width="220" onclick="this.play();" height="120">
+             <source src="{{response.videoUrl}}" />
+                </video>
+            </div>
+        <p> Start Time : <span>{{response.startDate}}</span> </p>
+        <p>Upvotes: <span class="badge">{{response.upvotes}}</span></p>
+        <button ng-click="upvote(response.$id)" class = "btn btn-success">Upvote</button>
+      </div>
+    </div>
+
+</div>
 </div>
 
 
