--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -1,3 +1,5 @@
+
+<div ng-hide="fromShare">
 <h2 style="margin: -190px auto 0px auto;text-align:center;padding:20px 0px 10px 0px; color:#ffffff;text-shadow: 0px -1px 1px #666;">Public Challenges</h2>
 <h4 style="margin: 0px auto 10px auto;text-align:center;color:#ffffff;text-shadow: 0px -1px 1px #666;">Sort Options</h4>
 <ul class="breadcrumb" style="opacity:0.8;width:70%;margin: 0px auto 10px auto;margin-bottom:2
@@ -7,7 +9,7 @@
 
 <!-- hide if no challenges - TODO: have placeholder otherwise -->
 
-<div id="pb-challenges" ng-hide="fromShare" style="text-align:center;padding: 0px 20px;">
+<div id="pb-challenges" ng-show="publicc.length" style="text-align:center;padding: 0px 20px;">
 
 		<div ng-repeat="challenge in publicc | orderBy: sort | reverse" class="panel panel-default">
 		  <div class="panel-heading" style="border-bottom:0px;">
@@ -26,6 +28,7 @@
 			  </div>
 		</div>
 
+</div>
 </div>
 
 <!-- UBERHACK: duplicate the view challenge template for shared challenges since redirecting apparently doesn't work -->
